# canonical-ai-demo

./: .dockerignore  .env.example  Makefile  README.md  TALK_TRACK.md  docker-compose.yml
db/: demo-customer.sql  seed.sql
deploy/: README.md  canonical-ai-demo.yaml
docker/: app.Dockerfile  postgres.Dockerfile  worker.Dockerfile
python/: config.py  prompts.py  worker.py
python/activities/: control.py  db.py  llm.py  tools.py
python/models/: types.py
python/workflows/: agent.py
web/: README.md  app.js  config.js  gateway.py  index.html  pyproject.toml
